# FastMRICPP

./: .gitignore  CMakeLists.txt  ReadMe.md  conanfile.txt
CMake/: GTKmm.cmake  Torch.cmake  wxWidget.cmake  wxWidgets.cmake
conan/: .gitignore  conanfile.txt  profile_linux
src/: CMakeLists.txt  Torch.cmake  main.cpp  readH5.cc  windows_fix.cmake  wxgui.cc
